--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 	<div id="feature">
 		<div class="container">
-			<div class="row"></div>
+			<div class="row"><br/></div>
 			<div class="row">
 				<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
 					<div class="text-center">
