--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					</div>
 					<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
 						<div class="text-center">
-							<img src="img/team/team4.jpg" class="img-responsive" alt="">
+							<img src="img/team/team4-n.jpg" class="img-responsive" alt="">
 							<h2>You?</h2>
 							<h4>Awesome contributer!</h4>
 							<p>Join our team</p>
