--- a/index.html
+++ b/index.html
@@ -166,25 +166,25 @@
 				<div class="row">
 					<div class="col-md-3 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
 						<div class="text-center">
-							<img src="img/team/team1-n.jpg" class="img-responsive" alt="">
-							<h2>Chakradhar Rao Jonagam</h2>
-							<h4>Founder & CTO</h4>
+							<img src="img/team/team2-n.jpg" class="img-responsive" alt="">
+							<h2>Karthik Reddy Bonthu</h2>
+							<h4>Co-Founder</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Fusce fermen tum neque a rutrum varius</p>
 						</div>
 					</div>
 					<div class="col-md-3 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
 						<div class="text-center">
-							<img src="img/team/team2-n.jpg" class="img-responsive" alt="">
-							<h2>Founder & CEO</h2>
-							<h4>Creative Director</h4>
+							<img src="img/team/team1-n.jpg" class="img-responsive" alt="">
+							<h2>Chakradhar Rao Jonagam</h2>
+							<h4>Co-Founder</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Fusce fermen tum neque a rutrum varius</p>
 						</div>
 					</div>
 					<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
 						<div class="text-center">
 							<img src="img/team/team3-n.jpg" class="img-responsive" alt="">
-							<h2>John Smith</h2>
-							<h4>Creative Director</h4>
+							<h2>Karthik Sagar Panchangam</h2>
+							<h4>Co-Founder</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Fusce fermen tum neque a rutrum varius</p>
 						</div>
 					</div>
