--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<div class="container">
 			<div class="text-center">
 				<h3>Simple Plans</h3>
-				<p>Right plans for your needs</p>
+				<!-- <p>Right plans for your needs</p> -->
 			</div>
 			
 			<div class="pricing-area text-center">
