--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 	
 	<div id="feature">
 		<div class="container">
+			<!--
 			<div class="text-center">
 				<h3>Top notch tech</h3>
 				<p>At your door steps</p>
-			</div>  
+			</div>
+			-->  
 			<div class="row">
 				<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
 					<div class="text-center">
@@ -83,7 +85,44 @@
 						</div>
 					</div>
 				</div>
-				
+			</div>
+			<div class="row">
+				<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
+					<div class="text-center">
+						<div class="hi-icon-wrap hi-icon-effect">
+							<i class="fa fa-flash"></i>
+							<h2>Function as a Service</h2>
+							<p>Lambda style serverless capabilities on-prem</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
+					<div class="text-center">
+						<div class="hi-icon-wrap hi-icon-effect">
+							<i class="fa fa-linux"></i>
+							<h2>Moby</h2>
+							<p>Build your own slim operating systems</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
+					<div class="text-center">
+						<div class="hi-icon-wrap hi-icon-effect">
+							<i class="fa fa-mobile"></i>
+							<h2>MBaaS</h2>
+							<p>Mobile Backend as a Service (parse)</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.3s">
+					<div class="text-center">
+						<div class="hi-icon-wrap hi-icon-effect">
+							<i class="fa fa-users"></i>
+							<h2>API Gateway</h2>
+							<p>Public and Private API's to power your microservices</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
