--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">XFC.io</a>
+				<a class="navbar-brand" href="index.html">
+					<img style="max-width:150px; margin-top: -50px;" src="img/logo.png">
+				</a>
 			</div>				
 			<div class="collapse navbar-collapse navbar-right">
 				<ul class="nav navbar-nav">
